# ArchSystem

./: .gitignore
lab1/: l.sh  lab1.sh
lab2/: Makefile  benchmark.sh  main.c
lab2/src/: main.c
lab3/: benchmark.sh
lab3/src/: CMakeLists.txt
lab3/src/main/: main.c
lab3/src/memtest/: memtest.c  memtest.h
lab4/: CMakeLists.txt  makegraph2.py  run.sh
lab4/src/: CMakeLists.txt
lab4/src/dgemm/: dgemm.c  dgemm.h
lab4/src/main/: main.c
lab5/: Makefile  makegraph.py  run.sh
lab5/src/dgemm/: dgemm.c  dgemm.h  dgemmMPI.c  dgemmMPI.h  dgemmOMP.c  dgemmOMP.h  dgemmPT.c  dgemmPT.h
lab5/src/main/: main.c  mainMPI.c  mainOMP.c  mainPT.c
